[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/AnimatedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/themeNormal.tres" type="Theme" id=2]
[ext_resource path="res://scenes/UI/GameOver.gd" type="Script" id=3]
[ext_resource path="res://assets/vignette.png" type="Texture" id=4]
[ext_resource path="res://sounds/Game-Over.wav" type="AudioStream" id=5]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 0.47451 )
position = Vector2( 318.5, 171 )
scale = Vector2( 5.17969, 4 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
pause_mode = 2
margin_left = 112.0
margin_top = 30.0
margin_right = 208.0
margin_bottom = 149.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_right = 96.0
margin_bottom = 13.0
theme = ExtResource( 2 )
text = "GAME OVER"
align = 1

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 19.0
margin_right = 96.0
margin_bottom = 32.0
theme = ExtResource( 2 )
text = "VOCE PERDEU O JOGO"
align = 1

[node name="Label3" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 38.0
margin_right = 96.0
margin_bottom = 51.0
theme = ExtResource( 2 )
text = "SCORE: 0"
align = 1

[node name="Control" type="Control" parent="MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 57.0
margin_right = 96.0
margin_bottom = 57.0

[node name="BtnVoltar" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 1 )]
pause_mode = 2
margin_top = 63.0
margin_bottom = 88.0
rect_scale = Vector2( 1, 1 )
text = "JOGAR NOVAMENTE"

[node name="BtnMenu" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 1 )]
pause_mode = 2
margin_top = 94.0
margin_bottom = 119.0
rect_scale = Vector2( 1, 1 )
text = "IR PARA O MENU"

[node name="gameover" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/BtnVoltar" to="." method="_on_BtnVoltar_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/BtnMenu" to="." method="_on_BtnMenu_pressed"]
